# rust-embedded-langs-vs-native-benchmark

./: Cargo.toml  README.md
.github/workflows/: ci.yml
benches/: data.json  embedded_langs.rs  json_parsing.rs
src/: lib.rs  main.rs
