[package]
name = "bench-comparison"
version = "0.1.0"
edition = "2021"

[dependencies]
regex = "1.10.2"
serde_json = "1.0.108"
vrl = "0.8.1"
urlencoding = "2.1.3"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
[lib]
bench = false

[[bench]]
name = "json_parsing"
harness = false
